--- a/src/iframe/iframe.component.html
+++ b/src/iframe/iframe.component.html
@@ -1,3 +1,10 @@
-<div>
-    test
+<div class="iframesContainer">
+    <!-- <iframe src="./chessgame.html"  title="description"></iframe>
+    <iframe src="./chessgame.html"  title="description"></iframe> -->
+    <!-- <iframe #iframe width="200" height="200" src=""></iframe> -->
+    <iframe [src]="urlSafe" height="500" width="500"></iframe>
+    <!-- <ngx-chess-board #board></ngx-chess-board> -->
+
 </div>
+
+
